--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,6 +7,14 @@
     android:paddingRight="18dp"
     android:background="@drawable/back">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor = "#000000"
+        android:id="@+id/bigtext"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,7 +31,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="30dp">
 
@@ -31,78 +39,75 @@
             android:id="@+id/B1"
             android:layout_width="30pt"
             android:layout_height="30pt"
-            android:layout_gravity="center"
-            android:background="@drawable/say"
             android:textColor="#444455"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:background="@drawable/say"
+            android:visibility="invisible"
+            android:layout_marginLeft="20dp"/>
 
         <Button
             android:id="@+id/B2"
             android:layout_width="30pt"
             android:layout_height="30pt"
-            android:layout_gravity="center"
-            android:background="@drawable/say"
             android:textColor="#444455"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:background="@drawable/say"
+            android:visibility="invisible"
+            android:layout_marginTop="120dp"
+            android:layout_marginLeft="30dp"/>
 
         <Button
             android:id="@+id/B3"
             android:layout_width="30pt"
             android:layout_height="30pt"
-            android:layout_gravity="center"
             android:background="@drawable/say"
             android:textColor="#444455"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"/>
 
         <Button
             android:id="@+id/B4"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_gravity="center"
-            android:background="@drawable/say"
             android:textColor="#444455"
+            android:background="@drawable/say"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"/>
 
         <Button
             android:id="@+id/B5"
             android:layout_width="30pt"
             android:layout_height="30pt"
-            android:layout_gravity="center"
-            android:background="@drawable/say"
             android:textColor="#444455"
             android:textSize="24sp"
+            android:background="@drawable/say"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"/>
 
         <Button
             android:id="@+id/B6"
             android:layout_width="30pt"
             android:layout_height="30pt"
-            android:layout_gravity="center"
             android:background="@drawable/say"
+            android:layout_gravity="center"
             android:textColor="#444455"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="invisible"
 
-        <Button
-            android:id="@+id/H1"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_gravity="center"
-            android:background="@drawable/say"
-            android:textColor="#444455"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:visibility="invisible" />
+            android:layout_marginLeft="30dp"/>
+
 
     </LinearLayout>
 
