--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/main"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="150pt"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:text="당신의 도시를 지켜보세요!"
         android:textColor="#444455"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="220dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginBottom="20dp"/>
 
     <Button
         android:id="@+id/StartButton"
         android:layout_width="100pt"
-        android:layout_height="18pt"
-        android:layout_gravity="bottom"
-        android:layout_weight="0.5"
+        android:layout_height="30pt"
+
         android:background="#ffffff"
         android:text="GAME START"
         android:textColor="#444455"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10pt"
-        tools:layout_editor_absoluteX="249dp"
-        tools:layout_editor_absoluteY="276dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="195dp"/>
 
 </LinearLayout>
